<resources>
    <string name="app_name">EventHandler</string>
    <string name="email">Email</string>
    <string name="password">Lozinka</string>
    <string name="first_name">Ime</string>
    <string name="last_name">Prezime</string>
    <string name="title">Naziv</string>
    <string name="login">Logovanje</string>
    <string name="ok">U redu</string>
    <string name="forgot_password">Zaboravljena lozinka?</string>
    <string name="no_account">Napravite nalog</string>
    <string name="confirm_password">Potvrdite lozinku</string>
    <string name="password_reset">Nova lozinka</string>
    <string name="email_address">Email adresa</string>
    <string name="reset_my_pass">Nova lozinka</string>
    <string name="reset_my_pass_text">Unesite Vasu email adresu u polje iznad da bi ste resetovali lozinku</string>
    <string name="create_account">Napravite nalog</string>
    <string name="gender">Pol</string>
    <string name="male">Muski</string>
    <string name="female">Zenski</string>
    <string name="date_birth">Datum rodjenja</string>
    <string name="map">Mapa</string>
    <string name="events">Dogadjaji</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="profile">Profil</string>
    <string name="event_page">Dogadjaji</string>
    <string name="create_event">Napravi dogadjaj</string>
    <string name="date">Datum</string>
    <string name="date1">Datum(YYYY/MM/DD)</string>
    <string name="time">Vreme</string>
    <string name="time1">Vreme(HH:MM)</string>
    <string name="address">Adresa</string>
    <string name="city">Grad</string>
    <string name="description">Opis</string>
    <string name="price">Cena: </string>
    <string name="category">Kategorija</string>
    <string name="pick_category">Izaberi kategoriju</string>
    <string name="add_photos">Dodaj slike u galeriju</string>
    <string name="sort">Sortiraj po:</string>
    <string name="name">Naziv</string>
    <string name="distance">Razdaljina</string>
    <string name="max_occupancy">Najvise gostiju</string>
    <string name="occupancy">Gosti</string>
    <string name="rating">Ocena</string>
    <string name="created_events">Napravljeni dogadjaji</string>
    <string name="rated_events">Ocenjeni dogadjaji</string>
    <string name="attended_events">Pohadjani dogadjaji</string>
    <string name="my_events">Moji dogadjaji</string>
    <string name="filter">Filter</string>
    <string name="asc">Rastuce</string>
    <string name="desc">Opadajuce</string>
    <string name="all_filters">Svi filteri</string>
    <string name="distance_km">Razdaljina(km)</string>
    <string name="time_day">Doba dana</string>
    <string name="day_week">Dan</string>
    <string name="mon">Ponedeljak</string>
    <string name="tue">Utorak</string>
    <string name="wed">Sreda</string>
    <string name="thu">Cetvrtak</string>
    <string name="fri">Petak</string>
    <string name="sat">Subota</string>
    <string name="san">Nedelja</string>
    <string name="filter_friend">Filter by friends</string>
    <string name="selected">Izabrano</string>
    <string name="free">Besplatno</string>
    <string name="paid">Placa se</string>
    <string name="spec_req">Speciajlni zahtevi</string>
    <string name="yes">Da</string>
    <string name="no">Ne</string>
    <string name="categories">Kategorije</string>
    <string name="apply_filters">Omoguci filtere</string>
    <string name="reset_all">Ponisti sve</string>
    <string name="logout">Izloguj se</string>
    <string name="gallery">Galerija</string>
    <string name="attendees">Prisutni</string>
    <string name="view_all">Pogledaj sve</string>
    <string name="event_gallery">Galerija dogadjaja</string>
    <string name="delete_image">Izbrisi sliku</string>
    <string name="event_attendees">Prisutni ljudi</string>
    <string name="edit_event">Izmeni dogadjaj</string>
    <string name="morning">Pre podne (6h-12h)</string>
    <string name="afternoon">Posle podne (12h-18h)</string>
    <string name="evening">Uvece (18h-24h)</string>
    <string name="midnight">Nakon ponoci(00h-6h)</string>
    <string name="monday">Ponedeljak</string>
    <string name="tuesday">Utorak</string>
    <string name="wednesday">Sreda</string>
    <string name="thursday">Cetvrtak</string>
    <string name="friday">Petak</string>
    <string name="saturday">Subota</string>
    <string name="sunday">Nedelja</string>
    <string name="enter_event_name">Unesi naziv dogadjaja:</string>
    <string name="cancel">Ponisti</string>
    <string name="days">Dani</string>
    <string name="hours">Sati</string>
    <string name="minutes">Minuti</string>
    <string name="seconds">Sekunde</string>
    <string name="view_event">Pogledaj dogadjaj</string>
    <string name="count_me">Racunaj na mene</string>
    <string name="creator">Vi ste napravili dogadjaj</string>
    <string name="already_attendee">Vec ste se prijavili</string>
    <string name="event_full">Nema slobodnih mesta</string>
    <string name="event_creator">Vlasnik dogadjaja:</string>
    <string name="points">Poeni</string>
    <string name="options">Opcije</string>
    <string name="add_friend">Dodaj prijatelja</string>
    <string name="go_to_profile">Idi na profil</string>
    <string name="pending_request">Zahtevi za prijateljstvo</string>
    <string name="am_out">Odjavi dogadjaj</string>
    <string name="leaderboard">Rang lista</string>

</resources>
