<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212"
    android:orientation="vertical"
    tools:context=".FilterActivity">

    <LinearLayout
        android:id="@+id/groupLL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:tag="all">

        <TextView
            android:id="@+id/Distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:textColor="@color/colorBackWhite" />

        <EditText
            android:id="@+id/DistanceEditFi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:inputType="number"
            android:outlineAmbientShadowColor="#FFFFFF"
            android:textColor="@color/colorBackWhite" />

        <TextView
            android:id="@+id/TimeOD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_day"
            android:textColor="@color/colorBackWhite" />

        <LinearLayout
            android:id="@+id/Time_of_day"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:tag="Time_of_day">

            <CheckBox
                android:id="@+id/MorningCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#FDFDFD"
                android:text="@string/morning"
                android:textColor="@color/colorBackWhite" />

            <CheckBox
                android:id="@+id/AfternoonCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#FDFDFD"
                android:text="@string/afternoon"
                android:textColor="@color/colorBackWhite" />

            <CheckBox
                android:id="@+id/EveningCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#FDFDFD"
                android:text="@string/evening"
                android:textColor="@color/colorBackWhite" />

            <CheckBox
                android:id="@+id/MidnightCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#FDFDFD"
                android:text="@string/midnight"
                android:textColor="@color/colorBackWhite" />
        </LinearLayout>

        <TextView
            android:id="@+id/DayOW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/day_week"
            android:textColor="@color/colorBackWhite" />

        <LinearLayout
            android:id="@+id/Day_of_week"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:tag="Day_of_week">

            <CheckBox
                android:id="@+id/MondayCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#FDFDFD"
                android:text="@string/monday"
                android:textColor="@color/colorBackWhite" />

            <CheckBox
                android:id="@+id/TuesdayCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#FDFDFD"
                android:text="@string/tuesday"
                android:textColor="@color/colorBackWhite" />

            <CheckBox
                android:id="@+id/WednesdayCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#FDFDFD"
                android:text="@string/wednesday"
                android:textColor="@color/colorBackWhite" />

            <CheckBox
                android:id="@+id/ThursdayCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#FDFDFD"
                android:text="@string/thursday"
                android:textColor="@color/colorBackWhite" />

            <CheckBox
                android:id="@+id/FridayCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#FDFDFD"
                android:text="@string/friday"
                android:textColor="@color/colorBackWhite" />

            <CheckBox
                android:id="@+id/SaturdayCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#FDFDFD"
                android:text="@string/saturday"
                android:textColor="@color/colorBackWhite" />

            <CheckBox
                android:id="@+id/SundayCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#FDFDFD"
                android:text="@string/sunday"
                android:textColor="@color/colorBackWhite" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spec_req"
            android:textColor="@color/colorBackWhite" />

        <Switch
            android:id="@+id/SpecialReqSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textColor="@color/colorBackWhite" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/colorBackWhite" />

        <Switch
            android:id="@+id/PriceSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paid"
            android:textColor="@color/colorBackWhite" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            android:textColor="@color/colorBackWhite" />

        <LinearLayout
            android:id="@+id/Categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundTint="#FFFFFF"
            android:orientation="vertical"
            android:tag="@string/categories"
            android:textColor="@color/colorBackWhite">

        </LinearLayout>

        <Button
            android:id="@+id/filterBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Primeni" />

    </LinearLayout>

</ScrollView>