<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#111111"
    tools:context=".CreateAccountActivity"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageView
            android:id="@+id/ImageEdit"
            android:layout_width="250dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:src="@drawable/empty_profile_picture_png_2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="20dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:textColor="@color/colorBackWhite"
                android:layout_height="wrap_content"
                android:text="@string/first_name" />

            <EditText
                android:id="@+id/FirstNameCA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"

                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                android:textColor="@color/colorBackWhite" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBackWhite"
                android:text="@string/last_name" />

            <EditText
                android:id="@+id/LastNameCA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                android:textColor="@color/colorBackWhite" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:paddingLeft="20dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBackWhite"
            android:text="@string/email" />

        <EditText
            android:id="@+id/EmailCA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorBackWhite" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBackWhite"
            android:text="@string/password" />

        <EditText
            android:id="@+id/PasswordCA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/colorBackWhite" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBackWhite"
            android:text="@string/confirm_password" />

        <EditText
            android:id="@+id/ConfirmPasswordCA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:inputType="textPassword"
            android:textColor="@color/colorBackWhite" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBackWhite"
            android:text="@string/gender" />

        <RadioGroup
            android:id="@+id/GenderCA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBackWhite"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/MaleCA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#FFFFFF"
                android:checked="true"
                android:text="@string/male"
                android:textColor="@color/colorBackWhite" />

            <RadioButton
                android:id="@+id/FemaleCA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#FFFFFF"
                android:checked="false"
                android:text="@string/female"
                android:textColor="@color/colorBackWhite" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBackWhite"
            android:text="@string/date_birth" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/DateCA"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:inputType="date"
                android:textColor="@color/colorBackWhite" />

            <ImageView
                android:id="@+id/imageDateCA"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="3"
                android:src="@drawable/calendar"
                android:tint="#FFFFFF" />

        </LinearLayout>

        <Button
            android:id="@+id/CreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/create_account" />
    </LinearLayout>
</LinearLayout>