<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="6"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#121212"
            tools:context=".CreateEventActivity">
            <ImageView
                android:id="@+id/AddCoverImg"
                android:layout_width="match_parent"
                android:layout_height="200dp" />
            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:textColor="@color/colorBackWhite"
                android:layout_height="wrap_content"
                android:text="@string/title" />

            <EditText
                android:id="@+id/TitleCE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                android:textColor="@color/colorBackWhite" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBackWhite"
                    android:layout_weight="1"
                    android:text="@string/date1" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBackWhite"
                    android:layout_weight="1"
                    android:text="@string/time1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/DateCE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:backgroundTint="#FFFFFF"
                    android:ems="10"
                    android:inputType="date"
                    android:textColor="@color/colorBackWhite" />

                <ImageView
                    android:id="@+id/DateImgCE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:tint="#FFFFFF"
                    app:srcCompat="@drawable/calendar" />

                <EditText
                    android:id="@+id/TimeCE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:backgroundTint="#FFFFFF"
                    android:ems="10"
                    android:inputType="time"
                    android:textColor="@color/colorBackWhite" />

                <ImageView
                    android:id="@+id/TimeImgCE"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:tint="#FFFFFF"
                    app:srcCompat="@drawable/clock" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorBackWhite"
                    android:text="@string/address" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorBackWhite"
                    android:text="@string/city" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/AddressCE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#FFFFFF"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text=""
                    android:textColor="@color/colorBackWhite" />

                <EditText
                    android:id="@+id/CityCE"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#FFFFFF"
                    android:textColor="@color/colorBackWhite" />


            </LinearLayout>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBackWhite"
                android:text="@string/description" />

            <EditText
                android:id="@+id/DescriptionCE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                android:textColor="@color/colorBackWhite" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBackWhite"
                android:text="@string/max_occupancy" />

            <EditText
                android:id="@+id/OccupancyCE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:inputType="number"
                android:textColor="@color/colorBackWhite" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBackWhite"
                android:text="@string/price" />

            <EditText
                android:id="@+id/PriceCE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textColor="@color/colorBackWhite" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBackWhite"
                android:text="@string/pick_category" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spinnerCat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ff0000"
                android:backgroundTint="#000000"
                app:ms_arrow_tint="@color/colorBackWhite"
                app:ms_background_color="#000000"
                app:ms_dropdown_max_height="200dp"
                app:ms_text_color="@color/colorBackWhite" />
            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBackWhite"
                android:text="@string/spec_req" />

            <EditText
                android:id="@+id/SpecialReqCE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/colorBackWhite"
                android:text="" />



        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#131313"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBackWhite"
            android:text="@string/add_photos" />
        <GridView
            android:id="@+id/grid_create_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="4"/>
    </LinearLayout>
</LinearLayout>